# distance-correlation-plugin

./: .gitignore  README.html  README.md  distance_correlation.py  plugin.yaml  pyproject.toml  requirements.txt
spa-out/: angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
spa-out/scripts/: generate-lock.mjs
spa-out/src/: index.html  main.ts  styles.scss
spa-out/src/app/: app.html  app.integration.spec.ts  app.scss  app.spec.ts  app.ts
spa-out/src/app/components/progress-panel/: progress-panel.html  progress-panel.scss  progress-panel.spec.ts  progress-panel.ts
spa-out/src/app/components/results-panel/: results-panel.html  results-panel.scss  results-panel.spec.ts  results-panel.ts
spa-out/src/app/services/: browser-example-resolver.spec.ts  browser-example-resolver.ts  browser-file-handler.ts  browser-log-handler.ts  browser-notification-handler.ts  pyodide.ts  theme.service.ts  webr.ts
spa-out/src/environments/: environment.ts
